test/good/basic/scope01.px

if true do
    i = false
i = 2
print i
